test/resources/ValidPrograms/test_39.lo
// good test case
// Ternary statements, pointer exchange
// main method return value:  12
// Author: Aaron Wollman (Summer 2021)

class Main() {
    int main(){
        Integer a, b, c;
        {
            a = new Integer(12);
            b = new Integer((~3));
            c = ((b.getValue() < 0) ? a : b);
            return c.getValue();
        }
    }
}

class Integer(int val;){
    void Integer(int value){
        {
            val = value;
        }
    }

    int getValue(){
        {return val;}
    }
}